mobile layout issue fix

--- a/webroot/css/custom.css
+++ b/webroot/css/custom.css
@@ -529,6 +529,14 @@ h3.heading > span,
     width: 100%;
     font-size: 12px
 }
+#reportrange2 {
+    background: #fff;
+    cursor: pointer;
+    padding: 5px 5px;
+    border: 1px solid #ccc;
+    width: 100%;
+    font-size: 12px
+}
 .dropdown_txt1 {
     position: absolute;
     left: -9999px;
@@ -780,4 +788,138 @@ h3.heading > span,
 .event-details  .organizer-logo {
     width: 75px;
     height: auto;
+} 
+
+.mobile-navbar .mobile-logo-img {
+    width: 65%;
+}
+
+.mobile-navbar.one-edge-shadow {
+    -webkit-box-shadow: 0 8px 6px -10px black;
+       -moz-box-shadow: 0 8px 6px -10px black;
+            box-shadow: 0 8px 6px -10px black;
+}
+.mobile-navbar .mobile-menu button {
+    border-radius: 0;
+    margin-top: 7px;
+}
+.mobile-navbar .mobile-menu span {
+    font-size: 23px;
+}
+.mobile-footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 50px;
+    -webkit-box-shadow: 0 -5px 5px -5px #333;
+       -moz-box-shadow: 0 -5px 5px -5px #333;
+            box-shadow: 0 -5px 5px -5px #333;
+    background-color: #fff;
+    z-index: 100;
+} 
+.mobile-footer .container div {
+    width: 50%;
+    text-align: center;
+    float: left;
+    padding: 15px;
+}
+.mobile-footer .container div a {
+    color: #0B4360;
+}
+.mobile-footer .container div a:hover {
+    text-decoration: none;
+}
+.mobile-footer .container div.left {
+    border-right: 1px solid #dedede;
+}
+@media (max-width: 767px) {
+    .container-content {
+        margin-top: 30px;
+    }
+    .container-content {
+        margin-top: 30px;
+    }
+    .main-footer {
+        margin-bottom: 50px !important;
+    }
+}
+
+.modal-mob-filter.fade:not(.in).left .modal-dialog, .modal-mob-filter-cat.fade:not(.in).left .modal-dialog, .modal-mob-menus.fade:not(.in).left .modal-dialog {
+    -webkit-transform: translate3d(-25%, 0, 0);
+    transform: translate3d(-25%, 0, 0);
+}
+.modal-mob-filter.fade:not(.in).right .modal-dialog, .modal-mob-filter-cat.fade:not(.in).right .modal-dialog, .modal-mob-menus.fade:not(.in).right .modal-dialog {
+    -webkit-transform: translate3d(125%, 0, 0);
+    transform: translate3d(125%, 0, 0);
+}
+.modal-mob-filter.fade:not(.in).bottom .modal-dialog, .modal-mob-filter-cat.fade:not(.in).bottom .modal-dialog, .modal-mob-menus.fade:not(.in).bottom .modal-dialog {
+    -webkit-transform: translate3d(0, 125%, 0);
+    transform: translate3d(0, 125%, 0);
+} 
+.modal-mob-filter input, .modal-mob-filter-cat input, .modal-mob-menus input {
+    border-radius: 0 !important;
+}
+.modal-mob-filter .modal-content, .modal-mob-filter-cat .modal-content, .modal-mob-menus .modal-content {
+    border-radius: 0 !important;
+}
+
+.ui-menu.ui-widget.ui-widget-content {
+    z-index: 1551;
+}
+.mob-category-list .mob-cs-cat:hover {
+    cursor: pointer;
+}
+.mob-cs-sub-cat .checkbox {
+    margin-top: 0 !important;
+}
+.mob-cs-sub-cat .checkbox .mob-cr { 
+    border: 1px solid #aea3a3 !important;
+}
+.mob-category-list .bootstrap-tagsinput {
+    width: 100%;
+    height: auto;
+}
+.mob-category-list .bootstrap-tagsinput .tag {
+    margin-right: 2px;
+    color: white;
+    margin-bottom: 5px !important;
+    float: left;
+    padding: 5px;
+    font-size: 12px;
+}
+.mob-category-list .tag + input {
+    min-width: auto !important;
+}
+.modal-mob-menus .list-group-item {
+    text-align: center;
+}
+.modal-mob-menus .list-group-item a {
+    font-weight: bold;
+}
+.modal-mob-menus .list-group-item a:hover {
+    text-decoration: none;    
+}
+
+.modal-mob-menus .modal-dialog {
+    margin: 96% auto;
+    bottom: 0;
+    position: absolute;
+    margin: 0;
+    width: 100%;
+}
+.ipad-profile {
+    float: right;
+    margin: 10px;
+}
+.ipad-profile .dropdown-content {
+    right: 0 !important
+}
+@media only screen 
+and (min-device-width : 768px) 
+and (max-device-width : 1024px) {
+    .navbar-nav.search-nav {
+        margin-left: 12% !important;
+        margin-top: 10px;
+    }
 }
